improve ChannelingRecipe#matches